# FlipullSolver

./: Cargo.toml  README.md
examples/: extract_advance.rs  extract_normal.rs  format_solution.rs  solve.rs  solve_normal_multi.rs
problem-advance/: 00.in  00.out  01.in  01.out  02.in  02.out  03.in  03.out  04.in  04.out  05.in  05.out  06.in  06.out  07.in  07.out  08.in  08.out  09.in  09.out  10.in  10.out  11.in  11.out  12.in  12.out  13.in  13.out  14.in  14.out  15.in  15.out  16.in  16.out  17.in  17.out  18.in  18.out  19.in  19.out  (+60 more)
src/: block.rs  bounded_heap.rs  cost.rs  game_mode.rs  ground.rs  lib.rs  macros.rs  move_.rs  position.rs  problem.rs  rom.rs  solver.rs  util.rs
src/extract/: advance.rs  mod.rs  normal.rs
