[package]
name = "flipull-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
arrayvec = "0.7.2"
byteorder = "1.4.3"
itertools = "0.10.5"
log = "0.4.18"

[dev-dependencies]
clap = { version = "4.3.2", features = ["derive"] }
env_logger = "0.10.0"
indoc = "2.0.1"
parse_int = "0.6.0"
pretty_assertions = "1.3.0"
